Evict renderer Surface on gpu restart.

The renderer SurfaceLayer and some other Surface related information
wasn't always being cleared when the gpu restarted. Ensure that happens.

Bug: 761131
Change-Id: I4c53d4f0ec288bf8bf9cee32af1174caa8256f4b